syntax = "proto3";

package musicclub.song;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "user.proto";
import "permissions.proto";

// Provides CRUD functionality for songs
service SongService {
  // Returns a paginated list of songs.
  rpc ListSongs(ListSongsRequest) returns (ListSongsResponse);

  // Returns a single song with full metadata and assignments.
  rpc GetSong(SongId) returns (SongDetails);

  // Create songs (requires permissions).
  rpc CreateSong(CreateSongRequest) returns (SongDetails);
  // Update songs (requires permissions).
  rpc UpdateSong(UpdateSongRequest) returns (SongDetails);
  // Delete songs (requires permissions).
  rpc DeleteSong(SongId) returns (google.protobuf.Empty);

  // Join a role for a song.
  rpc JoinRole(JoinRoleRequest) returns (SongDetails);
  // Leave a role for a song.
  rpc LeaveRole(LeaveRoleRequest) returns (SongDetails);
}

message ListSongsRequest {
  // Optional substring filter by title or artist.
  string query = 1;

  // Pagination cursor (opaque to client).
  string page_token = 2;
  uint32 page_size = 3;
}

message ListSongsResponse {
  repeated Song songs = 1;
  string next_page_token = 2;
}

message SongId {
  string id = 1;
}

message Song {
  string id = 1;
  string title = 2;
  string artist = 3;
  SongLink link = 4;
  string description = 5;
  repeated string available_roles = 6;

  // Whether current user may edit this song.
  bool editable_by_me = 7;
}

message SongDetails {
  Song song = 1;
  repeated RoleAssignment assignments = 2;
  musicclub.permissions.PermissionSet permissions = 3;
}

message SongLink {
  SongLinkType kind = 1;
  string url = 2;
}

enum SongLinkType {
  SONG_LINK_TYPE_UNKNOWN = 0;
  SONG_LINK_TYPE_YOUTUBE = 1;
  SONG_LINK_TYPE_YANDEX_MUSIC = 2;
  SONG_LINK_TYPE_SOUNDCLOUD = 3;
}

message RoleAssignment {
  string role = 1;
  musicclub.user.User user = 2;
  google.protobuf.Timestamp joined_at = 3;
}

message CreateSongRequest {
  string title = 1;
  string artist = 2;
  SongLink link = 3;
  string description = 4;
  repeated string available_roles = 5;
}

message UpdateSongRequest {
  string id = 1;
  string title = 2;
  string artist = 3;
  SongLink link = 4;
  string description = 5;
  repeated string available_roles = 6;
}

message JoinRoleRequest {
  string song_id = 1;
  string role = 2;
}

message LeaveRoleRequest {
  string song_id = 1;
  string role = 2;
}
